plugins {
    id 'java'
}

// Force IDE Gradle sync for JPMS modules


group = 'com.jamma'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

subprojects {
    apply plugin: 'java'

    group = rootProject.group
    version = rootProject.version

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(26)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:6.0.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += [
            '--enable-preview'
        ]
    }

    tasks.withType(Test).configureEach {
        jvmArgs += [
            '--enable-preview'
        ]
        useJUnitPlatform()
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs += [
            '--enable-preview'
        ]
    }
}
